# droplet-monitor

./: NEWS  README.md  meson.build  meson_options.txt
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
droplet-monitor-applet/: dropletmonitor-applet.vala  dropletmonitor-popover.vala  meson.build
droplet-monitor-applet/data/: DropletMonitor.plugin  com.github.samlane-ma.droplet-monitor-applet.gschema.xml  meson.build
droplet-monitor-applet/src/: config.h.in  docean.vala  dropletlist.vala  dropletmonitor-applet.vala  dropletmonitor-popover.vala  meson.build
droplet-monitor-common/: droplet-monitor-service.1  meson.build
droplet-monitor-common/icons/: ,  meson.build
droplet-monitor-common/man/: meson.build
droplet-monitor-common/src/: com.github.samlane_ma.droplet_monitor.service.in  dropletmonitor-service.vala  meson.build
droplet-monitor-server/: com.github.samlane_ma.droplet_monitor.service.in  meson.build
droplet-monitor-service/: meson.build
droplet-monitor-widget/: DropletMonitorWidget.plugin  com.github.samlane-ma.widget.droplet-monitor.gschema.xml  docean.vala  dropletlist.vala  dropletmonitor-grid.vala  dropletmonitor-widget.vala  meson.build
droplet-monitor-widget/data/: DropletMonitorWidget.plugin  com.github.samlane-ma.droplet-monitor.widget.gschema.xml  meson.build
droplet-monitor-widget/icons/: meson.build
droplet-monitor-widget/src/: docean.vala  dropletlist.vala  dropletmonitor-grid.vala  dropletmonitor-widget.vala  meson.build
icons/: meson.build
src/: DropletManager.plugin  DropletMonitor.plugin  curl-easy.vala  docean.vala  dropletlist.vala  dropletmanager-applet.vala  dropletmanager-popover.vala  dropletmonitor-applet.vala  dropletmonitor-popover.vala  meson.build  server-dm.vala
src/applet/: config.h.in  curl-easy.vala  docean.vala  dropletlist.vala  dropletmonitor-popover.vala  meson.build
src/backend/: server-dm.vala
vapi/: config.vapi
