install_data(
    'do-server-warn-symbolic.svg',
    'do-server-ok-symbolic.svg',
    'do-server-error-symbolic.svg',
    'do-server-online.svg',
    'do-server-offline.svg',
    'do-action-lock-symbolic.svg',
    'do-action-unlock-symbolic.svg',
    'do-droplet-copy-symbolic.svg',
    'do-droplet-reboot-symbolic.svg',
    'do-droplet-refresh-symbolic.svg',
    'do-ssh-launch-symbolic.svg',
    'do-droplet-start-symbolic.svg', 
    'do-droplet-stop-symbolic.svg',
    install_dir: PIXMAPS_DIR
)
