install_data(
    'droplet-action-lock-symbolic.svg',
    'droplet-action-unlock-symbolic.svg',
    'droplet-action-copy-symbolic.svg',
    'droplet-action-reboot-symbolic.svg',
    'droplet-action-refresh-symbolic.svg',
    'droplet-action-start-symbolic.svg',
    'droplet-action-stop-symbolic.svg',
    'droplet-status-error-symbolic.svg',
    'droplet-server-offline.svg',
    'droplet-status-ok-symbolic.svg',
    'droplet-server-online.svg',
    'droplet-status-warn-symbolic.svg',
    'droplet-action-ssh-symbolic.svg',
    install_dir: PIXMAPS_DIR
)
