install_data(
    'droplet-action-lock-symbolic.svg',
    'droplet-action-unlock-symbolic.svg',
    'droplet-server-offline.svg',
    'droplet-server-online.svg',
    'droplet-status-error-symbolic.svg',
    'droplet-status-ok-symbolic.svg',
    'droplet-status-warn-symbolic.svg',
    install_dir: PIXMAPS_DIR
)
